[project]
name = "simplestforms"
dynamic = ["version"]

[tool.setuptools]
packages = ["simplestforms"]

[tool.setuptools.dynamic]
version = {attr = "simplestforms.__version__"}

[project.scripts]
csv = "simplestforms.scripts.exportcsv:main"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.mypy]
ignore_missing_imports = true